package invoicemanager.core.interfaces;

public interface IIdManager {
    int getNextId();
}
