package invoicemanager.core.model;

public class Client {
    public final String name;
    public final String surname;

    public Client(String name, String surname) {
        this.name = name;
        this.surname = surname;
    }
}
