package invoicemanager.core.model;

public class Product {
    public final String name;
    public final float cost;

    public Product(String name, float cost) {
        this.name = name;
        this.cost = cost;
    }
}
